# -4

./: main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/: config.py  hh_api.py  json_saver.py  saver.py  utils.py  vacancy.py
tests/: README.md  main.py
